[uda] lesson 3 / added validation

--- a/course-04/exercises/c4-demos-master/lesson-03-demo/serverless.yml
+++ b/course-04/exercises/c4-demos-master/lesson-03-demo/serverless.yml
@@ -8,6 +8,8 @@ custom:
 
 plugins:
   - serverless-webpack
+  - serverless-reqvalidator-plugin
+  - serverless-aws-documentation
 
 provider:
   name: aws
@@ -26,8 +28,20 @@ provider:
         - dynamodb:PutItem
       Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.GROUPS_TABLE}
 
-functions:
+custom:
+  documentation:
+    api:
+      info:
+        version: v1.0.0
+        title: Udagram API
+        description: Serverless application for image sharing
+    models:
+      - name: GroupRequest
+        contentType: application/json
+        schema: ${file(models/create-group-request.json)}
 
+functions:
+  
   GetGroups:
     handler: src/lambda/http/getGroups.handler
     events:
@@ -43,9 +57,25 @@ functions:
           method: post
           path: groups
           cors: true
+          reqValidatorName: RequestBodyValidator
+          documentation:
+            summary: Create a new group
+            description: Create a new group
+            requestModels:
+              'application/json': GroupRequest
 
 resources:
   Resources:
+
+    RequestBodyValidator:
+        Type: AWS::ApiGateway::RequestValidator
+        Properties:
+          Name: 'request-body-validator'
+          RestApiId:
+            Ref: ApiGatewayRestApi
+          ValidateRequestBody: true
+          ValidateRequestParameters: false
+
     GroupsDynamoDBTable:
       Type: AWS::DynamoDB::Table
       Properties:
