--- a/course-04/exercises/c4-demos-master/lesson-03-demo/serverless.yml
+++ b/course-04/exercises/c4-demos-master/lesson-03-demo/serverless.yml
@@ -16,7 +16,7 @@ provider:
   environment:
     GROUPS_TABLE: Groups-${self:provider.stage}
     IMAGES_TABLE: Images-${self:provider.stage}
-    IMAGE_ID_INDEX: ImagesIdIndex
+    IMAGE_ID_INDEX: ImageIdIndex
   
   iamRoleStatements:
     - Effect: Allow
