--- a/course-04/exercises/c4-demos-master/lesson-03-demo/serverless.yml
+++ b/course-04/exercises/c4-demos-master/lesson-03-demo/serverless.yml
@@ -93,7 +93,7 @@ functions:
     events:
       - http:
           method: get
-          path: images/{ImageId}
+          path: images/{imageId}
           cors: true
 
   CreateImage:
@@ -133,7 +133,7 @@ resources:
         BillingMode: PAY_PER_REQUEST
         TableName: ${self:provider.environment.GROUPS_TABLE}
 
-    # Need to add: 'imageId', 'title', 'url'
+    # Need to add: 'title', 'url'
     ImagesDynamoDBTable:
       Type: AWS::DynamoDB::Table
       Properties:
