--- a/course-04/exercises/c4-demos-master/lesson-03-demo/serverless.yml
+++ b/course-04/exercises/c4-demos-master/lesson-03-demo/serverless.yml
@@ -18,6 +18,7 @@ provider:
     GROUPS_TABLE: Groups-${self:provider.stage}
     IMAGES_TABLE: Images-${self:provider.stage}
     IMAGE_ID_INDEX: ImageIdIndex
+    CONNECTIONS_TABLE: Connections-${self:provider.stage}
     IMAGES_S3_BUCKET: serverless-udagram-images-${self:provider.stage}-${self:provider.randomnum}
     SIGNED_URL_EXPIRATION: 300
 
@@ -42,6 +43,12 @@ provider:
         - s3:PutObject
         - s3:GetObject
       Resource: arn:aws:s3:::${self:provider.environment.IMAGES_S3_BUCKET}/*
+    - Effect: Allow
+      Action:
+        - dynamodb:Scan
+        - dynamodb:PutItem
+        - dynamodb:GetItem
+      Resource: arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/${self:provider.environment.CONNECTIONS_TABLE}
 
 custom:
   webpack:
@@ -122,6 +129,20 @@ functions:
 
   SendUploadNotifications:
     handler: src/lambda/s3/sendNotifications.handler
+
+  # Connections
+
+  ConnectHandler:
+    handler: src/lambda/websocket/connect.handler
+    events:
+      - websocket:
+          route: $connect
+
+  DisconnectHandler:
+    handler: src/lambda/websocket/disconnect.handler
+    events:
+      - websocket:
+          route: $disconnect
 
 resources:
   Resources:
