--- a/course-04/exercises/c4-demos-master/lesson-03-demo/serverless.yml
+++ b/course-04/exercises/c4-demos-master/lesson-03-demo/serverless.yml
@@ -47,7 +47,7 @@ provider:
       Action:
         - dynamodb:Scan
         - dynamodb:PutItem
-        - dynamodb:GetItem
+        - dynamodb:DeleteItem
       Resource: arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/${self:provider.environment.CONNECTIONS_TABLE}
 
 custom:
