--- a/course-04/exercises/c4-demos-master/lesson-03-demo/serverless.yml
+++ b/course-04/exercises/c4-demos-master/lesson-03-demo/serverless.yml
@@ -128,6 +128,10 @@ functions:
   # Notifications
 
   SendUploadNotifications:
+    environment:
+      STAGE: ${self:provider.stage}
+      API_ID:
+        Ref: WebsocketsApi
     handler: src/lambda/s3/sendNotifications.handler
 
   # Connections
