--- a/course-04/exercises/c4-demos-master/lesson-03-demo/serverless.yml
+++ b/course-04/exercises/c4-demos-master/lesson-03-demo/serverless.yml
@@ -148,6 +148,17 @@ functions:
       - websocket:
           route: $disconnect
 
+  # ElasticSearch
+
+  SyncWithElasticsearch:
+    # environment:
+    #   ES_ENDPOINT: !GetAtt ImagesSearch.DomainEndpoint
+    handler: src/lambda/dynamoDb/elasticSearchSync.handler
+    events:
+      - stream:
+          type: dynamodb
+          arn: !GetAtt ImagesDynamoDBTable.StreamArn
+
 resources:
   Resources:
     RequestBodyValidator:
@@ -195,6 +206,8 @@ resources:
               ProjectionType: ALL
         BillingMode: PAY_PER_REQUEST
         TableName: ${self:provider.environment.IMAGES_TABLE}
+        StreamSpecification:
+          StreamViewType: NEW_IMAGE
 
     WebSocketConnectionsDynamoDBTable:
       Type: AWS::DynamoDB::Table
