[uda] lesson 4 / enabled connection to endpoint

--- a/course-04/exercises/c4-demos-master/lesson-03-demo/serverless.yml
+++ b/course-04/exercises/c4-demos-master/lesson-03-demo/serverless.yml
@@ -151,8 +151,8 @@ functions:
   # ElasticSearch
 
   SyncWithElasticsearch:
-    # environment:
-    #   ES_ENDPOINT: !GetAtt ImagesSearch.DomainEndpoint
+    environment:
+      ES_ENDPOINT: !GetAtt ImagesSearch.DomainEndpoint
     handler: src/lambda/dynamoDb/elasticSearchSync.handler
     events:
       - stream:
