--- a/course-04/exercises/c4-demos-master/lesson-03-demo/serverless.yml
+++ b/course-04/exercises/c4-demos-master/lesson-03-demo/serverless.yml
@@ -21,7 +21,7 @@ provider:
     CONNECTIONS_TABLE: Connections-${self:provider.stage}
     IMAGES_S3_BUCKET: serverless-udagram-images-${self:provider.stage}-${self:provider.randomnum}
     SIGNED_URL_EXPIRATION: 300
-    THUMBNAILS_S3_BUCKET: serverless-udagram-thumbnail-${self:provider.stage}
+    THUMBNAILS_S3_BUCKET: serverless-udagram-thumbnail-${self:provider.stage}-${self:provider.randomnum}
 
   iamRoleStatements:
     - Effect: Allow
