--- a/course-04/exercises/c4-demos-master/lesson-03-demo/package.json
+++ b/course-04/exercises/c4-demos-master/lesson-03-demo/package.json
@@ -10,6 +10,8 @@
     "elasticsearch": "^15.5.0",
     "http-aws-es": "^6.0.0",
     "jimp": "^0.6.8",
+    "jsonwebtoken": "^8.5.1",
+    "middy": "^0.25.0",
     "source-map-support": "^0.5.11",
     "uuid": "^3.3.2"
   },
